# fastapi-auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  Fastapi-auth.postman_collection.json  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6cfee7804713_initial_migration.py  96eb51b6d18e_add_verified_at_in_user.py  ead3217587bf_add_avatar_in_user.py
app/: main.py  server.py
app/api/: auth.py  router.py  users.py
app/core/: auth.py  config.py  database.py  helper.py  logger.py  mail.py  pagination.py  redis.py  response.py  upload_file.py
app/debs/: auth.py
app/models/: __init__.py  user.py
app/schemas/: auth.py  response.py  user.py
app/services/: user_service.py
app/tests/: conftest.py  test_auth.py  test_user.py
